Add view route to see all blog posts in DB. Update CSS

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -2,4 +2,113 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    color: #FB6F92;
+    font-family: "Quicksand", sans-serif;
+}
+
+.gradient-background {
+    background: linear-gradient(302deg,#ffe5ec,#ffd6ff,#ffc2d1,#e7c6ff);
+    background-size: 240% 240%;
+    animation: gradient-animation 24s ease infinite;
+  }
+  
+  @keyframes gradient-animation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+
+  .nav {
+    background-color: #FF8FAB;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 2rem;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+}
+
+.site-title {
+    font-size: 2rem;
+}
+
+.nav ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    gap: 1rem;
+}
+
+.nav a {
+    color:inherit;
+    text-decoration: none;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: .25rem;
+    color: #FFE5EC;
+}
+
+.nav li.active {
+    color: #FF8FEE;
+}
+
+.nav li:hover {
+    background-color: #E38FFF;
+}
+
+
+main {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    min-height: 100vh;
+    flex: 1;
+  }
+
+  h1 {
+    font-size: 5rem;
+    padding-top: 10px;
+}
+
+h2 {
+    color: #FF8FAB;
+    font-size: 2rem;
+    font-style: italic;
+}
+
+.blog {
+  background-color: #fff0f3;
+  display: block;
+  height: fit-content;
+  width: 1000px;
+  margin-bottom: 30px;
+  border-radius: 10px;
+}
+
+.blog-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+.blog p {
+  padding: 5px 10px;
 }
