--- a/client/public/style.css
+++ b/client/public/style.css
@@ -99,6 +99,7 @@ h2 {
   width: 1000px;
   margin-bottom: 30px;
   border-radius: 10px;
+  padding: 20px 10px;
 }
 
 .blog-content {
@@ -112,3 +113,23 @@ h2 {
 .blog p {
   padding: 5px 10px;
 }
+
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 1.25rem;
+}
+
+form > * {
+  margin: 10px;
+}
+
+form input, textarea {
+  outline-color: #FB6F92;
+}
+
+input[type=text], textarea {
+  box-sizing: border-box;
+  width: 500px; }
