Create new Navbar as a component, which stores the profile of the user logged in and logout

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -24,48 +24,50 @@
     }
   }
 
-  .nav {
+  .navbar {
+    height: 50px;
     background-color: #FF8FAB;
-    color: white;
+    color: #FFE5EC;
+    position: relative;
     display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    gap: 2rem;
-    width: 100%;
-    position: fixed;
+    align-items: center;
+    justify-content: space-around;
     z-index: 1;
 }
 
-.site-title {
-    font-size: 2rem;
+.pageLinks {
+  color: #FFE5EC;
 }
 
-.nav ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    display: flex;
-    gap: 1rem;
+.logo {
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
 }
 
-.nav a {
-    color:inherit;
-    text-decoration: none;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: .25rem;
+.list, .pageLinks {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+
+.listItem, .pageLinkItem {
+    margin-right: 20px;
+    font-weight: 500;
+    cursor: pointer;
     color: #FFE5EC;
 }
 
-.nav li.active {
+.listItem.active {
     color: #FF8FEE;
 }
 
-.nav li:hover {
-    background-color: #E38FFF;
+.avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
 }
-
 
 main {
     position: absolute;
@@ -149,4 +151,13 @@ input[type=text], textarea {
     border-radius: 5px;
     cursor: pointer;
     width: 100px;
+}
+
+.link{
+  color: inherit;
+  text-decoration: none;
+}
+
+.inspired {
+  color: #FF8FEE
 }
