--- a/client/src/style.css
+++ b/client/src/style.css
@@ -132,7 +132,7 @@ form input, textarea {
   outline-color: #FB6F92;
 }
 
-input[type=text], textarea {
+form input[type=text], textarea {
   box-sizing: border-box;
   width: 500px; }
 
@@ -160,4 +160,113 @@ input[type=text], textarea {
 
 .inspired {
   color: #FF8FEE
+}
+
+.login {
+  height: calc(100vh - 50px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+
+.wrapper {
+  width: 60%;
+  height: 75%;
+  display: flex;
+  align-items: center;
+  border-radius: 20px;
+  background-color: white;
+}
+
+.left,.right{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.right input {
+  outline-color: #FB6F92;
+}
+
+.center{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.or{
+  border: 2px solid #FB6F92;
+  border-radius: 50%;
+  padding: 10px;
+  color: #FB6F92;
+  background-color: #ffd6ff;
+  font-weight: bold;
+  z-index: 0;
+}
+
+.line{
+  width: 0.5px;
+  height: 70%;
+  background-color: #FF8FEE;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: 0;
+}
+
+.loginButton{
+  width: 150px;
+  padding: 15px 25px;
+  border-radius: 5px;
+  color: white;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.google{
+  background-color: #df4930;
+}
+.facebook{
+  background-color: #507cc0;
+}
+.github{
+  background-color: black;
+}
+
+.icon{
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.submit{
+  width: 200px;
+  background-color: #ffc2d1;
+  color: white;
+  font-weight: bold;
+  border: none;
+  padding: 15px 20px;
+  border-radius: 5px;
+}
+
+input{
+  width: 200px;
+  padding: 15px 20px;
+  margin-bottom: 20px;
+}
+
+.loginTitle{
+  position: absolute;
+  top: 80px;
+  color:#FB6F92;
 }
