--- a/client/src/style.css
+++ b/client/src/style.css
@@ -97,11 +97,10 @@ h2 {
 .blog {
   background-color: #fff0f3;
   display: block;
-  height: fit-content;
-  width: 1000px;
-  margin-bottom: 30px;
+  height: 200px;
+  width: 600px;
+  margin-bottom: 10px;
   border-radius: 10px;
-  padding: 20px 10px;
 }
 
 .blog-content {
@@ -109,7 +108,6 @@ h2 {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-bottom: 30px;
 }
 
 .blog p {
@@ -134,11 +132,15 @@ form input, textarea {
 
 form input[type=text], textarea {
   box-sizing: border-box;
-  width: 500px; }
+  width: 800px; }
 
+form textarea {
+  height: 300px;
+}
 
 .content {
   padding-top: 80px;
+  width: 100%;
 }
 
 .post {
@@ -259,9 +261,8 @@ form input[type=text], textarea {
   border-radius: 5px;
 }
 
-input{
-  width: 200px;
-  padding: 15px 20px;
+form input, textarea{
+  padding: 5px 5px;
   margin-bottom: 20px;
 }
 
@@ -313,4 +314,20 @@ a:-webkit-any-link {
 
 .blog-action {
   width: 150px;
+}
+
+.blogContainer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.blogTitle {
+  background-color: #FF8FAB;
+  color: #fff0f3;
+  width: 100%;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  padding: 5px 10px;
 }
